--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 body {
   background-image: url("img/tlo.webp");
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   color: #ffffff;
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 100vh;}
-  
+  min-height: 100vh;
+}
+
 .container {
   width: 1280px;
   margin-left: auto;
@@ -17,7 +18,6 @@ body {
   margin-right: auto;
   font-size: 100px;
   text-align: center;
-  
 }
 .lista {
   width: 1240px;
@@ -27,18 +27,18 @@ body {
   justify-content: space-between;
   margin: 0 auto;
   align-items: center;
-  
 }
 .tile {
-  padding: 10px;
-  margin: 10px;
+  padding: 30px;
+  margin: 0px;
   width: 172px;
   height: 25px;
   font-size: 26px;
   display: flex;
   align-items: center;
   justify-content: center;
-
+  position: relative;
+  font-weight: bold;
 }
 a.link {
   color: #ffffff;
@@ -49,19 +49,16 @@ a.link {
   transition: 0.25s;
   text-align: center;
 }
-.tile:hover > a.link
-{
+.tile:hover > a.link {
   color: red;
 }
-.main
-{
+.main {
   width: 1000px;
   height: 700px;
   margin-left: 20px;
   margin-top: 20px;
 }
-.kontakt
-{
+.kontakt {
   background: rgba(168, 161, 161, 0.5);
   margin: 20px;
   color: #fff;
@@ -72,21 +69,19 @@ a.link {
   display: flex;
   flex-direction: column;
   /* dostosowuje sie do rodzica a nie do calej strony */
-  position: relative; 
+  position: relative;
 }
-.ikona
-{
+.ikona {
   width: 35px;
 }
-.link1
-{color: #ffffff;
-text-decoration: none;
-display: block;
-width: 35px;
-height: 35px;
+.link1 {
+  color: #ffffff;
+  text-decoration: none;
+  display: block;
+  width: 35px;
+  height: 35px;
 }
-.socialmedia
-{
+.socialmedia {
   display: flex;
   margin-left: auto;
   justify-content: center;
@@ -95,10 +90,45 @@ height: 35px;
   top: 5px;
   right: 5px;
 }
-.title
-{
+.title {
   text-align: center;
   font-size: 30px;
   margin: 5px;
   font-weight: 800;
 }
+.dropdown-menu {
+  background-color: rgb(149, 163, 163);
+  position: absolute;
+  top: 60px;
+  list-style-type: none;
+  border: 1px solid #fff;
+  padding: 0;
+  display: none;
+  border-style: solid;
+  
+
+}
+.dropdown-menu:hover
+{
+  display: block;
+}
+.nav-item{
+  border-bottom: 1px solid #fff;
+  color: white;
+  padding: 5px;
+}
+
+.nav-item a {
+  color: #fff;
+text-decoration: none;
+font-size: 16px;
+transition: 0.4s;
+}
+.heroes3:hover > .dropdown-menu {
+  display:inline-block;
+  font-weight: bold;}
+  .nav-item a:hover
+  {
+    color: rgb(10, 103, 243);
+  
+  }
