--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("img/tlo.webp");
+  background-image: url("img/tlo.webp"); 
   font-family: "Lato", sans-serif;
   color: #ffffff;
   background-size: cover;
@@ -158,7 +158,6 @@ a.link {
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
   -o-transition: all 1s ease;
-  display: flex;
   width: 300px;
   margin-left: 30px;
 }
@@ -184,4 +183,121 @@ a.link {
 .first-steps-container
 {
   display: flex;
+}
+.img5
+{
+  margin-left: 400px;
+}
+.down-line{
+  background-color: rgba(149, 163, 163, 0.308);
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+  top: 5px;
+  right: 5px;
+  padding: 5px;
+}
+.hamburger{
+  display: none;
+}
+
+
+  @media(min-width: 600px) {
+
+  }
+
+
+
+@media (max-width: 768px) {
+
+  body {
+    background-color: lightblue;
+    padding: 20px;
+  }
+  .hamburger, .nav-mobile {
+    transition: .3s .1s ease-in-out;
+  }
+  .hamburger{
+    padding: 10px;
+    display: inline-block;
+    cursor: pointer;
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+  }
+ 
+.hamburger-box {
+  width: 35px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+}
+
+
+
+.hamburger-inner {
+  width: 100%;
+  height: 3px;
+  background-color: white;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: .1s .2s ease-in-out;
+}
+
+
+.hamburger-inner::before,
+.hamburger-inner::after {
+  content: '';
+  width: 100%;
+  height: 3px;
+  background-color: white;
+  position: absolute;
+  left: 0;
+  transition: .2s .2s ease-in-out;
+}
+.hamburger-inner::before {
+  top: -10px;
+}
+.hamburger-inner::after {
+  top: 10px;
+}
+
+.hamburger-active .hamburger-inner {
+  background-color: transparent;
+}
+ .hamburger-active .hamburger-inner:before{
+transform:translateY(10px) rotate(45deg);
+ }
+ .hamburger-active .hamburger-inner:after{
+  transform:translateY(-10px) rotate(-45deg);}
+  .nav-mobile {
+    height: 100vh;
+    width: 250px;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    background-color: rgb(149, 163, 163);
+    transform: translateX(-250px);
+  }
+  .nav-mobile-active {
+    transform: translateX(0px)
+ }
+
+  
+.nav-mobile-list{
+  list-style: none;
+  margin-top: 50px;
+}
+.nav-mobile-item {
+  margin-bottom: 20px;
+  list-style: none;
+}
+.dropdown-menu{
+  display: none;
+}
+.tile{
+  display: none;
+}
 }
