--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
   font-size: 25px;
   font-weight: bold;
   background-attachment: fixed;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  position: relative;
 }
 
 .container {
@@ -58,7 +62,7 @@ a.link {
   text-align: center;
 }
 .tile:hover > a.link {
-  color: red;
+  color: #11999e;
 }
 .main {
   width: 1000px;
@@ -136,7 +140,7 @@ a.link {
   font-weight: bold;
 }
 .nav-item a:hover {
-  color: rgb(10, 103, 243);
+  color: #11999e;
 }
 .tekst {
   font-weight: bold;
@@ -146,10 +150,10 @@ a.link {
   text-decoration: none;
 }
 .link2:hover {
-  color: red;
+  color: #11999e;
   transition: 0.3s;
 }
-.back-steps{
+.back-steps {
   background-color: rgba(168, 161, 161, 0.5);
 }
 .img2 {
@@ -192,20 +196,12 @@ a.link {
 }
 .first-steps-container {
   display: flex;
-  
 }
 .img5 {
   margin-left: 400px;
 }
 .down-line {
-  background-color: rgba(149, 163, 163, 0.308);
-  display: flex;
-  margin-left: auto;
-  align-items: center;
-  top: 5px;
-  right: 5px;
-  padding: 5px;
-}
+  background-color: rgba(149, 163, 163, 0.308);}
 .hamburger {
   display: none;
 }
@@ -220,25 +216,87 @@ footer {
   justify-content: space-between;
   font-size: 15px;
   padding: 10px;
-  margin: 0;
-  width: 100%;
-}
+  margin: 0 auto;
+  bottom: 0;
+  height: 60px;
 
+}
 
 .footer-column {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.ikona2{
+.ikona2 {
   width: 20px;
 }
-
+.footer-items {
+  width: 100%;
+  max-width: 1240px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 50px;
+}
+.link3 {
+  color: #ffffff;
+  text-decoration: none;
+  display: inline-block;
+}
+a.link3 {
+  margin-left: 5px;
+}
+.link3:hover {
+  color: #11999e;
+}
+.main-square
+{
+width: 1240px;
+}
+.square1 {
+  width: 75%;
+  display: flex;
+  padding: 10px;
+  margin: 10px;
+  flex-wrap: wrap;
+}
+.square-item {
+  width:400px;
+height:300px;
+background-color:#1b6ca8;
+margin: 15px;
+transition: 0.3s;
+color: #f4f4f4;
+font-size: 30px;
+}
+.square-item:hover {
+  background-color: #303960;
+}
+.square-item-1 {
+  background-image: url("img/21.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  text-align: center;
+  justify-content: space-between;
+}
+.square-item-1:hover {
+  filter: brightness(50%);
+  color: #f0a500;
+  opacity: 1.0;
+}
+.square-link {
+display: block;
+width: 100px;
+height: 100px;
+}
 @media (max-width: 768px) {
   .container {
     width: 95%;
   }
   body {
     background-color: lightblue;
-    padding: 20px;
+    padding: 0px;
     position: relative;
     width: 100%;
   }
@@ -328,17 +386,20 @@ footer {
   .nav-mobile-list {
     list-style: none;
     margin-top: 20px;
-    
   }
   .nav-mobile-item {
-    margin-bottom: 20px;
     list-style: none;
-    
   }
   a.link {
-    margin: 5px;
-    width: 150px;
+    width: 180px;
     height: 30px;
+    border: 1px solid black;
+    background-color: #aacfcf;
+  }
+  .nav-mobile-item a.link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .dropdown-menu {
     display: none;
@@ -355,20 +416,22 @@ footer {
   .first-steps-container {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   .img6 {
     width: 300px;
     margin: 10px;
     -webkit-transition: none;
-  -moz-transition: none;
-  -o-transition: none;
+    -moz-transition: none;
+    -o-transition: none;
   }
   .img6:hover {
     -moz-transform: none;
     -o-transform: none;
     -webkit-transform: none;
-    box-shadow: 1px 1px 1px black;}
-    .footer {
+    box-shadow: 1px 1px 1px black;
+  }
+  .footer {
     font-size: 10px;
     padding: 0px;
   }
@@ -418,8 +481,9 @@ footer {
     transform: rotate(-90deg);
     width: 10px;
     height: 10px;
-    float: right;
     transition: 0.25s;
+    right: 25px;
+    position: absolute;
   }
   .arrow-active {
     transform: rotate(90deg);
@@ -427,8 +491,13 @@ footer {
   .dropdown-list-mobile {
     height: 0;
     overflow: hidden;
+    transition: 0.3s;
   }
   .dropdown-active {
-    height: 100%;
+    height: 90px;
+  }
+  .dropdown-mobile-item {
+    display: flex;
+    align-items: center;
   }
 }
