--- a/css/style.css
+++ b/css/style.css
@@ -303,8 +303,18 @@ a.link3 {
   margin: 20px;
 
 }
+.calculate {
+  width: 100%;
+  height: 100%;
+  display: block;
+  justify-content: center;
+  align-items: center;
+}
+.book-magic {
+  background-image: url("img/ksiegaczarow.png");
+}
 .hide {
-  display:none;
+display:none;
 }
 @media (max-width: 768px) {
   .container {
